samples/_failures_safe/1761182947_b6c196_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_78f2b9d8.c: In function ‘main’:
./samples/SAFE/__tmp_78f2b9d8.c:160:5: error: expected expression at end of input
  160 |     buffer_free(&
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_78f2b9d8.c:160:5: error: expected declaration or statement at end of input
